[chromium] Clipping/Transforms applied in wrong order in opaque paint tracking https://bugs.webkit.org/show_bug.cgi?id=78775

Patch by Dana Jansens <danakj@chromium.org> on 2012-02-16
Reviewed by Stephen White.

Source/WebCore:

The clip was being applied in device coordinates, before transforming the painted
rect into device coordinates. This made any translations get doubly represented,
and gave incorrect paint tracking results.

Test: compositing/culling/unscrolled-within-boxshadow.html

Unit test: PlatformContextSkiaTest.cpp

* platform/graphics/skia/OpaqueRegionSkia.cpp:
(WebCore::OpaqueRegionSkia::didDraw):

Source/WebKit/chromium:

* tests/PlatformContextSkiaTest.cpp:
(WebCore::TEST):

LayoutTests:

* compositing/culling/unscrolled-within-boxshadow-expected.png: Added.
* compositing/culling/unscrolled-within-boxshadow-expected.txt: Added.
* compositing/culling/unscrolled-within-boxshadow.html: Added.
* compositing/overflow/clip-content-under-overflow-controls-expected.png:
* compositing/scrollbar-painting-expected.png:

Canonical link: https://commits.webkit.org/95822@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107988 268f45cc-cd09-0410-ab3c-d52691b4dbfc